fix: delete mobile overlay spacing

--- a/styles.css
+++ b/styles.css
@@ -801,11 +801,6 @@
             #portfolio .fila .proyecto {
                 margin: 10px auto;
             }
-            #portfolio .fila .proyecto .overlay {
-                justify-content: flex-end;
-                padding: 25px 18px;
-                gap: 8px;
-            }
             /* seccion CONTACTO */
             #contacto {
                 padding: 50px 15px;
